<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="22dp"
        android:padding="20dp"
        android:textSize="@dimen/default_button_textsize"
        android:text="@string/button_next" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/sentence2check"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:textSize="@dimen/default_button_textsize"
        android:hint="@string/hint_name_txt"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/sentence2check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/sentence3check"
        android:checked="true"
        android:text="@string/button_2sentences"
        android:textSize="@dimen/default_button_textsize" />

    <CheckBox
        android:id="@+id/sentence3check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:checked="true"
        android:textSize="@dimen/default_button_textsize"
        android:text="@string/button_3sentences" />

    <CheckBox
        android:id="@+id/sentence4check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sentence3check"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:textSize="@dimen/default_button_textsize"
        android:text="@string/button_4sentences" />

</RelativeLayout>