<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_2sentences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/default_button_topbottom_padding"
            android:paddingLeft="@dimen/default_button_padding"
            android:paddingRight="@dimen/default_button_padding"
            android:paddingTop="@dimen/default_button_topbottom_padding"
            android:text="@string/button_2sentences"
            android:textSize="@dimen/default_button_textsize" />

        <Button
            android:id="@+id/button_3sentences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/default_button_topbottom_padding"
            android:paddingLeft="@dimen/default_button_padding"
            android:paddingRight="@dimen/default_button_padding"
            android:paddingTop="@dimen/default_button_topbottom_padding"
            android:text="@string/button_3sentences"
            android:textSize="@dimen/default_button_textsize" />

        <Button
            android:id="@+id/button_4sentences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/default_button_topbottom_padding"
            android:paddingLeft="@dimen/default_button_padding"
            android:paddingRight="@dimen/default_button_padding"
            android:paddingTop="@dimen/default_button_topbottom_padding"
            android:text="@string/button_4sentences"
            android:textSize="@dimen/default_button_textsize" />

    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/record_btn" />

</RelativeLayout>